internal/gatewayapi/testdata/mergebackends-btp-backend-target-udp-multi-backendref-warning.in.yaml
envoyProxyForGatewayClass:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    namespace: envoy-gateway-system
    name: test
  spec:
    mergeBackends:
      selector:
        matchLabels:
          merge-eligible: "true"
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: udp
          protocol: UDP
          port: 91
          allowedRoutes:
            namespaces:
              from: All
backendTrafficPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: BackendTrafficPolicy
    metadata:
      namespace: default
      name: btp-backend-target
    spec:
      targetRefs:
        - group: ""
          kind: Service
          name: service-1
      mergeType: StrategicMerge
      circuitBreaker:
        maxConnections: 100
udpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: UDPRoute
    metadata:
      namespace: default
      name: udproute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      rules:
        - backendRefs:
            - name: service-1
              port: 8162
              weight: 1
            - name: service-2
              port: 8162
              weight: 1
